# coding-with-c

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  README.md
cmake/modules/: FindUthash.cmake
cmake/scripts/: dependencies.cmake  format.cmake  format_lint.cmake  gtest.cmake  uthash.cmake  utils.cmake
config/: LeetCodeConfig.cmake.in
src/: CMakeLists.txt
src/leetcode/: CMakeLists.txt  merge_sorted_array.c  three_sum_closest.c  two_sum.c
src/leetcode/include/: merge_sorted_array.h  three_sum_closest.h  two_sum.h
test/: CMakeLists.txt  merge_sorted_array_test.cpp  three_sum_closest_test.cpp  two_sum_test.cpp
